--- a/gocd/docker-compose.yml
+++ b/gocd/docker-compose.yml
@@ -3,10 +3,16 @@ services:
   server:
     image: gocd/gocd-server:v19.7.0
     restart: on-failure
-    #hostname: gocd-server.local.amperity.systems
     volumes:
-      - ./data:/godata:rw
       - ./home:/home/go:rw
+      - ./server:/godata:rw
     ports:
       - "8153:8153"
       - "8154:8154"
+
+  agent:
+    image: gocd/gocd-agent-ubuntu-16.04:v19.7.0
+    restart: on-failure
+    volumes:
+      - ./home:/home/go:rw
+      - ./agent:/godata:rw
