--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,16 @@ jobs:
           name: Publish Coverage
           command: 'bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json'
 
+  plugin:
+    executor: clojure
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-test-{{ checksum "project.clj" }}
+            - v1-test-
+      - run: make plugin
+
 
 # Workflow definitions
 workflows:
@@ -70,5 +80,8 @@ workflows:
       - style
       - test
       - coverage:
+          requires:
+            - test
+      - plugin:
           requires:
             - test
