--- a/resources/plugin.xml
+++ b/resources/plugin.xml
@@ -2,7 +2,7 @@
 <go-plugin id="amperity.gocd.agent.aurora" version="1">
   <about>
     <name>Aurora Elastic Agents</name>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <target-go-version>19.8.0</target-go-version>
     <description>Manages elastic agents running on Apache Aurora/Mesos.</description>
 
